--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -4,7 +4,9 @@ on:
   pull_request:
     branches: [main, master]
 
-permissions: {}
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
   main:
