--- a/.github/workflows/lint-pr-title.yml
+++ b/.github/workflows/lint-pr-title.yml
@@ -5,7 +5,8 @@ on:
     types: [opened, edited, synchronize, reopened]
     branches: [main, master]
 
-permissions: {}
+permissions:
+  pull-requests: write
 
 jobs:
   main:
